--- a/app/public/wp-content/themes/blankslate-child/style.css
+++ b/app/public/wp-content/themes/blankslate-child/style.css
@@ -12,36 +12,41 @@ Updated: 2023-12-07 15:43:24
 */
 
 .Anush_logo {
-    width: 150px;
+    width: 220px;
     height: auto;
 }
 
 header {
     display: flex;
-    justify-content: space-between width: 1440px;
-    Height: 80px;
+        justify-content: space-between width: 1440px;
+    Height: 50px;
     background-color: white
 }
 
 .menu {
     display: flex;
-    gap: 20px;
+     gap: 110px;
+
+       
 }
 
 .copyright {
     display: flex;
+    flex-direction: end;
     justify-content: center;
 
 }
 
 .wp_nav_menu {
     display: flex;
-    justify-content: flex-end;
+        justify-content: end;
 }
 
 a {
     text-decoration: none;
+    font-family: syne;
     color: black
+    
 }
 
 #menu-item-45 {
@@ -51,11 +56,14 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    
+    
+    
 }
 
 #menu-item-45 a {
     color: white
-}
+    }
 
 #menu-item-46 {
     width: 236px;
@@ -63,4 +71,5 @@ a {
      display: flex;
     align-items: center;
     justify-content: center;
+    
 }
